Canvas threejs added and compliance to the new change in web server

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
     XBotCore
   </h1>
 </div>
- <app-plugin-list></app-plugin-list>
- <app-slider-control></app-slider-control>
+<app-canvas></app-canvas>
+<app-plugin-list></app-plugin-list>
+<app-slider-control></app-slider-control>
