loading robots in webgl view Scaling issue not solved Some issue in orientation

--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -1,1 +1,2 @@
 <div #container></div>
+<!--<p>VelocityRef</p><input [type]="type" #Vel name="range" [(ngModel)]="valore"  step="0.1" (change)="setVelRef(Vel.value)" >--> 
