streaming data from WS to text box working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,4 @@
 </div>
 <app-canvas></app-canvas>
 <app-plugin-list></app-plugin-list>
-<app-slider-control></app-slider-control>
+<!--<app-slider-control></app-slider-control>-->
