--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
   </h1>
 </div>
 <app-canvas></app-canvas>
+<app-plotter></app-plotter>
 <app-plugin-list></app-plugin-list>
 <!--<app-slider-control></app-slider-control>-->
