UDGRADE to Angular 6 Material working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    XBotCore
-  </h1>
-</div>
+<mat-toolbar color="primary">
+    <span>XBotCore</span>
+  </mat-toolbar>
 <app-canvas></app-canvas>
 <app-plotter></app-plotter>
 <app-plugin-list></app-plugin-list>
