--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -1,31 +1,45 @@
-<div #container></div>
+<div class="canvas" #container></div>
+
 <div *ngIf="isJoint;else sensor">
-    <li > 
-        <p>ID: {{robotState.id}}  Name: {{robotState.name}}</p>
-        <p>Motor Position: {{robotState.motorPos}} <button type="button" (click)="addPlot(robotState.id,'motorPos',robotState.name)">Plot</button>
-             Link Position: {{robotState.linkPos}} <button type="button" (click)="addPlot(robotState.id,'linkPos',robotState.name)">Plot</button></p> 
-        <p>Motor Velocity: {{robotState.motorVel}} <button type="button" (click)="addPlot(robotState.id,'motorVel',robotState.name)">Plot</button>
-             Link Velocity: {{robotState.linkVel}} <button type="button" (click)="addPlot(robotState.id,'linkVel',robotState.name)">Plot</button></p>
-        <p>Stiffness: {{robotState.stiff}} <button type="button" (click)="addPlot(robotState.id,'stiff',robotState.name)">Plot</button>
-             Damping: {{robotState.damp}} <button type="button" (click)="addPlot(robotState.id,'damp',robotState.name)">Plot</button></p>
-        <p>Torque: {{robotState.effort}} <button type="button" (click)="addPlot(robotState.id,'effort',robotState.name)">Plot</button> 
-            Fault: {{robotState.fault}} <button type="button" (click)="addPlot(robotState.id,'fault',robotState.name)">Plot</button></p>
-        <p>Temperature: {{robotState.temp}} <button type="button" (click)="addPlot(robotState.id,'temp',robotState.name)">Plot</button> 
-            Aux: {{robotState.aux}} <button type="button" (click)="addPlot(robotState.id,'aux',robotState.name)">Plot</button></p>
-    </li>
+<mat-card class="example-card">
+<mat-card-header>
+    <mat-card-title>ID: {{robotState.id}}  Name: {{robotState.name}}</mat-card-title>
+</mat-card-header>
+<mat-card-content>
+       
+<p>Motor Position: <input  disabled matInput style="width: 50px;" value={{robotState.motorPos}}> <button  mat-raised-button color="primary" type="button" (click)="addPlot(robotState.id,'motorPos',robotState.name)">Plot</button>
+        Link Position: <input  disabled matInput style="width: 50px;" value={{robotState.linkPos}}> <button mat-raised-button color="primary" type="button" (click)="addPlot(robotState.id,'linkPos',robotState.name)">Plot</button></p> 
+<p>Motor Velocity:  <input  disabled matInput style="width: 50px;" value={{robotState.motorVel}}> <button mat-raised-button color="primary" type="button" (click)="addPlot(robotState.id,'motorVel',robotState.name)">Plot</button>
+        Link Velocity: <input  disabled matInput style="width: 50px;" value= {{robotState.linkVel}}> <button mat-raised-button color="primary" type="button" (click)="addPlot(robotState.id,'linkVel',robotState.name)">Plot</button></p>
+<p>Stiffness:  <input  disabled matInput style="width: 50px;" value={{robotState.stiff}}> <button mat-raised-button color="primary" type="button" (click)="addPlot(robotState.id,'stiff',robotState.name)">Plot</button>
+        Damping:  <input  disabled matInput style="width: 50px;" value={{robotState.damp}}> <button mat-raised-button color="primary" type="button" (click)="addPlot(robotState.id,'damp',robotState.name)">Plot</button></p>
+<p>Torque:  <input  disabled matInput style="width: 50px;" value={{robotState.effort}}> <button mat-raised-button color="primary" type="button" (click)="addPlot(robotState.id,'effort',robotState.name)">Plot</button> 
+    Fault:  <input  disabled matInput style="width: 50px;" value={{robotState.fault}}> <button mat-raised-button color="primary" type="button" (click)="addPlot(robotState.id,'fault',robotState.name)">Plot</button></p>
+<p>Temperature: <input  disabled matInput style="width: 50px;" value={{robotState.temp}}> <button mat-raised-button color="primary" type="button" (click)="addPlot(robotState.id,'temp',robotState.name)">Plot</button> 
+    Aux:  <input  disabled matInput style="width: 50px;" value={{robotState.aux}}> <button mat-raised-button color="primary" type="button" (click)="addPlot(robotState.id,'aux',robotState.name)">Plot</button></p>
+
+</mat-card-content>
+</mat-card>
+
 </div>
+      
+
 <ng-template #sensor>
-    <li > 
-        <p>ID: {{robotSensorState.id}}  Name: {{robotSensorState.name}}</p>
-        <p>Force: x:{{robotSensorState.forcex}} <button type="button" (click)="addPlot(robotSensorState.id,'forcex',robotSensorState.name)">Plot</button> 
-            y:{{robotSensorState.forcey}} <button type="button" (click)="addPlot(robotSensorState.id,'forcey',robotSensorState.name)">Plot</button>
-            z:{{robotSensorState.forcez}} <button type="button" (click)="addPlot(robotSensorState.id,'forcez',robotSensorState.name)">Plot</button>
-        </p>
-        <p>Torque: x:{{robotSensorState.torquex}} <button type="button" (click)="addPlot(robotSensorState.id,'torquex',robotSensorState.name)">Plot</button>
-            y:{{robotSensorState.torquey}} <button type="button" (click)="addPlot(robotSensorState.id,'torquey',robotSensorState.name)">Plot</button>
-            z:{{robotSensorState.torquez}} <button type="button" (click)="addPlot(robotSensorState.id,'torquez',robotSensorState.name)">Plot</button>      
-        </p>
-    </li>
+<mat-card class="example-card">
+<mat-card-header>
+    <mat-card-title>ID: {{robotSensorState.id}}  Name: {{robotSensorState.name}}</mat-card-title>
+</mat-card-header>
+<mat-card-content>
+<p>Force: x: <input  disabled matInput style="width: 50px;" value={{robotSensorState.forcex}}> <button mat-raised-button color="primary" type="button" (click)="addPlot(robotSensorState.id,'forcex',robotSensorState.name)">Plot</button> 
+    y:<input  disabled matInput style="width: 50px;" value={{robotSensorState.forcey}}>  <button mat-raised-button color="primary" type="button" (click)="addPlot(robotSensorState.id,'forcey',robotSensorState.name)">Plot</button>
+    z:<input  disabled matInput style="width: 50px;" value={{robotSensorState.forcez}}>  <button mat-raised-button color="primary" type="button" (click)="addPlot(robotSensorState.id,'forcez',robotSensorState.name)">Plot</button>
+</p>
+<p>Torque: x: <input  disabled matInput style="width: 50px;" value={{robotSensorState.torquex}}>  <button mat-raised-button color="primary" type="button" (click)="addPlot(robotSensorState.id,'torquex',robotSensorState.name)">Plot</button>
+    y: <input  disabled matInput style="width: 50px;" value={{robotSensorState.torquey}}>  <button mat-raised-button color="primary" type="button" (click)="addPlot(robotSensorState.id,'torquey',robotSensorState.name)">Plot</button>
+    z: <input  disabled matInput style="width: 50px;" value={{robotSensorState.torquez}}>  <button mat-raised-button color="primary" type="button" (click)="addPlot(robotSensorState.id,'torquez',robotSensorState.name)">Plot</button>      
+</p>
+    </mat-card-content>
+</mat-card>
 </ng-template>
   
   
