generic Plotter component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,11 @@
       <div class="item item-1" fxFlex="50%">
           <app-canvas></app-canvas>
       </div>
-      <div class="item item-2" fxFlex="50%">
-        <app-plotter></app-plotter>
+      <div class="item item-2" fxFlex="25%">
+        <app-plotter idPlot="1" ></app-plotter>
+      </div>
+      <div class="item item-3" fxFlex="25%">
+        <app-plotter idPlot="2" ></app-plotter>
       </div>
       </div>
       
