--- a/src/app/plotter/plotter.component.html
+++ b/src/app/plotter/plotter.component.html
@@ -1,4 +1,4 @@
-<canvas id="myChart" width="400" height="400"></canvas>
+<canvas [id]="getId()" width="400" height="400"></canvas>
 <p>
 <button mat-raised-button color="primary" type="button" (click)="clearData()">Clear Data</button> 
 <button mat-raised-button color="primary" type="button" (click)="freeze()">Freeze</button> 
