--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -3,7 +3,7 @@
 <div *ngIf="isJoint;else sensor">
 <mat-card class="example-card">
 <mat-card-header>
-    <mat-card-title>ID: {{robotState.id}}  Name: {{robotState.name}}</mat-card-title>
+    <mat-card-title>ID: {{robotState.id}}  Name: {{robotState.name}} <button  mat-raised-button color="primary" type="button" (click)="plotState(robotState.id,robotState.name)">PlotState</button></mat-card-title>
 </mat-card-header>
 <mat-card-content>
        
