--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,11 +30,11 @@
         <app-plotter idPlot="2" label="Position" [fields]="['motorPos','linkPos','refPos']"></app-plotter>
       </div>
       <div class="item item-2" fxFlex="33%" >
-        <app-plotter idPlot="3" [fields]="['motorVel','linkVel','refVel']"></app-plotter>
+        <app-plotter idPlot="3" label="Velocity"  [fields]="['motorVel','linkVel','refVel']"></app-plotter>
       </div>
    
       <div class="item item-3" fxFlex="34%">
-        <app-plotter idPlot="4"  [fields]="['effort','refTor']"></app-plotter>
+        <app-plotter idPlot="4" label="Torque"  [fields]="['effort','refTor']"></app-plotter>
       </div>
     </div>
       
