--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -1,6 +1,6 @@
-<div >
+<div style=" height:100%" >
 <div class="canvas" #container></div>
-
+<!--
 <div  *ngIf="isJoint;else sensor">
 <mat-card class="example-card">
 <mat-card-header>
@@ -23,6 +23,7 @@
 </mat-card>
 
 </div>
+-->
 </div>
 
 <ng-template #sensor>
