--- a/src/app/plotter/plotter.component.html
+++ b/src/app/plotter/plotter.component.html
@@ -1,6 +1,6 @@
-<div>
-<canvas [id]="getId()" width="600" height="600"></canvas>
-<div>
+<div >
+        <canvas [id]="getId()"></canvas>
+<!--<div>
 <button mat-raised-button color="primary" type="button" (click)="clearData()">Clear Data</button> 
 <button mat-raised-button color="primary" type="button" (click)="freeze()">Freeze</button>
 </div> 
@@ -9,5 +9,5 @@ Scale <input #Scale name="range" step="0.1" (change)="setScale(Scale.value)" >
 </div>
 <div>
 Sample <input #Sample name="range" step="0.1" (change)="setSample(Sample.value)" > 
-</div>
+</div>-->
 </div>
