--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,3 +18,23 @@
 #tab{
     margin-top: 100px;
 }
+
+::ng-deep .mat-tab-body-wrapper {
+    height: 100%;
+}
+
+/*.mat-tab-body-wrapper{
+    flex-grow: 1;
+}
+
+.mat-tab-body-content{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}*/
+
+/*.mat-tab-group{
+    height: 100%;
+}*/
