plotter working full height

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -104,22 +104,21 @@
                       </div>
                     </div>
                   -->
-                  <!--PLOT view-->
-
-                <!--  <div class="item item-1"  fxFlex="calc2Cols" >
-                      <div style="background-color: orange; height:100%">
-                         <app-plotter idPlot="1" ></app-plotter>
+                  <!--PLOT view WORKING-->
+                  <div class="item item-1"  fxFlexFill >
+                      <div style="height:100%;">
+                         <app-plotter  idPlot="1" ></app-plotter>
                      </div> 
                   </div>
-                </div>-->
-
-                  <!--MODEL view-->
-                  <div class="item item-1"  fxFlex="calc2Cols" >
-                      <div style="background-color: orange; height:100%">
+                </div>
+                  <!--MODEL view WORKING-->
+                  <!--<div class="item item-1"  fxFlexFill >
+                      <div style=" height:100%">
                           <app-canvas></app-canvas>
                      </div> 
                   </div>
                 </div>
+              -->
 
 
 
