--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -1,4 +1,4 @@
-<div style=" height:100%" >
+<!--<div style=" height:100%" >-->
 <div class="canvas" #container></div>
 <!--
 <div  *ngIf="isJoint;else sensor">
@@ -24,7 +24,7 @@
 
 </div>
 -->
-</div>
+<!--</div>-->
 
 <ng-template #sensor>
 <mat-card class="example-card">
