--- a/src/app/plotter/plotter.component.html
+++ b/src/app/plotter/plotter.component.html
@@ -1,4 +1,4 @@
-<div >
+<div style=" height:100%;" >
         <canvas [id]="getId()"></canvas>
 <!--<div>
 <button mat-raised-button color="primary" type="button" (click)="clearData()">Clear Data</button> 
