--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,148 +2,120 @@
 
 <mat-toolbar color="primary">
     <span>ROBOT WEB GUI</span>
+    <mat-button-toggle-group value="Model" style="margin-left: 50px;" #group="matButtonToggleGroup" name="mode" aria-label="Font Style" (change)="changeView(group.value)">
+        <mat-button-toggle value="Plotter">Plotter</mat-button-toggle>
+        <mat-button-toggle value="Model">Model</mat-button-toggle>
+        <mat-button-toggle value="AllPlots">4Plots</mat-button-toggle>
+    </mat-button-toggle-group>
 </mat-toolbar>
 <mat-tab-group style="width:100%; height:100%">
-    <mat-tab style="width:100%; height:100%" label="Monitoring">
-       <!-- <div class="containerModelPlot"
-        fxLayout ="row"
-        fxLayout.xs="column"
-        fxLayoutAlign="left"
-        fxLayoutGap="50px"
-        fxLayoutGap.xs="0">
-      <div class="item item-1" fxFlex="50%">
-          <app-canvas></app-canvas>
-      </div>
-      <div class="item item-2" fxFlex="50%">
-        <app-plotter idPlot="1" ></app-plotter>
-      </div>
-     
-      </div>
+  <mat-tab style="width:100%; height:100%" label="Monitoring">
 
-      <div
-      fxLayout ="row"
-      fxLayout.xs="column"
-      fxLayoutAlign="center"
-      fxLayoutGap="30px"
-      fxLayoutGap.xs="0">
-      <div class="item item-1" fxFlex="33%">
-        <app-plotter idPlot="2" label="Position" [fields]="['motorPos','linkPos','refPos']"></app-plotter>
-      </div>
-      <div class="item item-2" fxFlex="33%" >
-        <app-plotter idPlot="3" label="Velocity"  [fields]="['motorVel','linkVel','refVel']"></app-plotter>
-      </div>
-   
-      <div class="item item-3" fxFlex="34%">
-        <app-plotter idPlot="4" label="Torque"  [fields]="['effort','refTor']"></app-plotter>
-      </div>
-    </div>
-  -->  
-
-
-      <div style="width:100%; height:100%" class="containerModelPlot"
-      fxLayout ="column"
-      fxLayout.xs="column"
-      fxLayoutAlign="center stretch"
-      fxLayoutGap="5px"
-      fxLayoutGap.xs="0">
-        <div class="item item-1"  fxFlex="90" >
-         <div style="height:100%">
-             
-            <div style="width:100%; height:100%"
-            fxLayout ="row"
-            fxLayout.xs="column"
-            fxLayoutAlign="center stretch"
-            fxLayoutGap="5px"
-            fxLayoutGap.xs="0">
-              <div class="item item-1"  fxFlex="20" >
-               <div style="background-color: orange; height:100%">
-                 col1
+    <div style="width:100%; height:100%" class="containerModelPlot"
+    fxLayout ="column"
+    fxLayout.xs="column"
+    fxLayoutAlign="center stretch"
+    fxLayoutGap="5px"
+    fxLayoutGap.xs="0">
+      <div class="item item-1"  fxFlex="90" >
+        <div style="height:100%">
+          <div style="width:100%; height:100%"
+          fxLayout ="row"
+          fxLayout.xs="column"
+          fxLayoutAlign="center stretch"
+          fxLayoutGap="5px"
+          fxLayoutGap.xs="0">
+            <div class="item item-1"  fxFlex="20" >
+              <div style="background-color: orange; height:100%">
+                col1
               </div> 
-              </div>
-              <div class="item item-2"  fxFlex="40" >
+            </div>
+            <div class="item item-2"  fxFlex="40" >
+                <div style="width:100%; height:100%"
+                fxLayout ="column"
+                fxLayout.xs="column"
+                fxLayoutAlign="center stretch"
+                fxLayoutGap="2px"
+                fxLayoutGap.xs="0">
+                  <div  *ngIf="allPlotsViewFlag; then LeftPlotView"></div>
+                </div>
+            </div>
+            <div class="item item-3"  fxFlex="40" >
+                <div style="height:100%"> 
                   <div style="width:100%; height:100%"
                   fxLayout ="column"
                   fxLayout.xs="column"
                   fxLayoutAlign="center stretch"
                   fxLayoutGap="2px"
                   fxLayoutGap.xs="0">
-                    <div class="item item-1"  fxFlex="5" >
-                     <div style="background-color: orange; height:100%">
-                       row1
-                    </div> 
-                    </div>
-                    <div class="item item-2"  fxFlex="47" >
-                      <div style=" height:100%">
-                          <app-plotter idPlot="2" label="Position" [fields]="['motorPos','linkPos','refPos']"></app-plotter></div> 
-                    </div>
-                    <div class="item item-3"  fxFlex="48" >
-                        <div style=" height:100%">
-                            <app-plotter idPlot="3" label="Velocity"  [fields]="['motorVel','linkVel','refVel']"></app-plotter> 
-                        </div> 
-                      </div>
-            
+                    <div  *ngIf="plotterViewFlag; then plotterView"></div>
+                    <div  *ngIf="modelViewFlag; then modelView"></div>
+                    <div  *ngIf="allPlotsViewFlag; then twoPlotView"></div>
                   </div>
-              
-              </div>
-              <div class="item item-3"  fxFlex="40" >
-                  <div style="height:100%"> 
-                    <div style="width:100%; height:100%"
-                    fxLayout ="column"
-                    fxLayout.xs="column"
-                    fxLayoutAlign="center stretch"
-                    fxLayoutGap="2px"
-                    fxLayoutGap.xs="0">
-                    <!--2 PLOT view-->
-                      <!--<div class="item item-1"  fxFlex="50" >
-                       <div style=" height:100%">
-                          <app-plotter idPlot="1" ></app-plotter>
-                      </div> 
-                      </div>
-                      <div class="item item-2"  fxFlex="50" >
-                          <app-plotter idPlot="4" label="Torque"  [fields]="['effort','refTor']"></app-plotter> 
-                      </div>
-                    </div>
-                  -->
-                  <!--PLOT view WORKING-->
-                  <div class="item item-1"  fxFlexFill >
-                      <div style="height:100%;">
-                         <app-plotter  idPlot="1" ></app-plotter>
-                     </div> 
-                  </div>
-                </div>
-                  <!--MODEL view WORKING-->
-                  <!--<div class="item item-1"  fxFlexFill >
-                      <div style=" height:100%">
-                          <app-canvas></app-canvas>
-                     </div> 
-                  </div>
-                </div>
-              -->
-
-
-
-
-                    </div> 
-                </div>
-      
+                </div> 
             </div>
-        
+          </div>
         </div> 
-        </div>
-        <div class="item item-2"  fxFlex="10" >
-          <div style="background-color: red; height:100%">item2</div> 
-        </div>
-
+      </div>
+      <div class="item item-2"  fxFlex="10" >
+        <div style="background-color: red; height:100%">LOGGER</div> 
       </div>
 
-
+    </div>
     </mat-tab>
     <mat-tab label="Plugins">
       <app-plugin-list></app-plugin-list>
     </mat-tab>
-  </mat-tab-group>
+</mat-tab-group>
 
 <!--<app-slider-control></app-slider-control>-->
 
 
   
+<ng-template #plotterView>
+  <div class="item item-1"  fxFlexFill >
+      <div style="height:100%;">
+          <app-plotter  idPlot="0" ></app-plotter>
+      </div> 
+  </div>
+</ng-template>
+
+<ng-template #modelView>
+    <div class="item item-1"  fxFlexFill >
+        <div style=" height:100%">
+            <app-canvas></app-canvas>
+        </div> 
+    </div>
+</ng-template>
+
+
+<ng-template #twoPlotView>
+    <div class="item item-1"  fxFlex="50" >
+        <div style=" height:100%">
+          <app-plotter idPlot="1" ></app-plotter>
+        </div> 
+    </div>
+    <div class="item item-2"  fxFlex="50" >
+        <div style=" height:100%">
+          <app-plotter idPlot="4" label="Torque"  [fields]="['effort','refTor']"></app-plotter> 
+        </div>
+    </div>  
+</ng-template>  
+
+<ng-template #LeftPlotView>
+  <div class="item item-1"  fxFlex="5" >
+      <div style="background-color: orange; height:100%">
+        row1
+      </div> 
+  </div>
+  <div class="item item-2"  fxFlex="47" >
+      <div style=" height:100%">
+          <app-plotter idPlot="2" label="Position" [fields]="['motorPos','linkPos','refPos']"></app-plotter>
+      </div> 
+  </div>
+  <div class="item item-3"  fxFlex="48" >
+      <div style=" height:100%">
+          <app-plotter idPlot="3" label="Velocity"  [fields]="['motorVel','linkVel','refVel']"></app-plotter> 
+      </div> 
+  </div>
+</ng-template>
