--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,9 @@
     <mat-tab label="Plugins">
       <app-plugin-list></app-plugin-list>
     </mat-tab>
+    <mat-tab label="Sliders">
+        <app-slider-control></app-slider-control>
+      </mat-tab>
   </mat-tab-group>
 
 <!--<app-slider-control></app-slider-control>-->
