--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,8 +26,8 @@
           fxLayoutGap="5px"
           fxLayoutGap.xs="0">
             <div class="item item-1"  fxFlex="20" >
-              <div style="background-color: orange; height:100%">
-                col1
+              <div style="width:100%; height:100%;">
+                   <div  *ngIf="true; then TreeView"></div>
               </div> 
             </div>
             <div class="item item-2"  fxFlex="40" >
@@ -110,19 +110,18 @@
 </ng-template>  
 
 <ng-template #LeftPlotView>
-  <div class="item item-1"  fxFlex="5" >
-      <div style="background-color: orange; height:100%">
-        row1
-      </div> 
-  </div>
-  <div class="item item-2"  fxFlex="47" >
+  <div class="item item-2"  fxFlex="50" >
       <div style=" height:100%">
           <app-plotter idPlot="2" label="Position" [fields]="['motorPos','linkPos','refPos']"></app-plotter>
       </div> 
   </div>
-  <div class="item item-3"  fxFlex="48" >
+  <div class="item item-3"  fxFlex="50" >
       <div style=" height:100%">
           <app-plotter idPlot="3" label="Velocity"  [fields]="['motorVel','linkVel','refVel']"></app-plotter> 
       </div> 
   </div>
+</ng-template>
+
+<ng-template #TreeView>
+    <app-tree-panel></app-tree-panel>
 </ng-template>
