--- a/src/app/control-panel/control-panel.component.html
+++ b/src/app/control-panel/control-panel.component.html
@@ -1,7 +1,7 @@
 <div  *ngIf="isJoint;else sensor">
   <mat-card class="example-card">
     <mat-card-header>
-        <mat-card-title>ID: {{robotState.id}}  Name: {{robotState.name}} <button  mat-raised-button color="primary" type="button" (click)="plotState(robotState.id,robotState.name)">PlotState</button></mat-card-title>
+        <mat-card-title>ID: {{robotState.id}}  Name: {{robotState.name}} </mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <p>Motor Position: <input  disabled matInput style="width: 50px;" value={{robotState.motorPos}}> <button  mat-raised-button color="primary" type="button" (click)="addPlot(robotState.id,'motorPos',robotState.name)">Plot</button>
