bar chart added

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-.mat-expansion-panel{
+/*.mat-expansion-panel{
     background: #3f51b5;
     bottom: 0;
     clear: both;
@@ -6,7 +6,7 @@
     z-index: 2;
     width: 100%;
     
-}
+}*/
 
 .mat-toolbar{
     position: sticky;
