--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,10 @@
         <mat-button-toggle value="Model">Model</mat-button-toggle>
         <mat-button-toggle value="AllPlots">4Plots</mat-button-toggle>
     </mat-button-toggle-group>
+    <mat-button-toggle-group value="Global" style="margin-left: 50px;" #groupPanel="matButtonToggleGroup" name="modePanel" aria-label="Font Style" (change)="changeViewPanel(groupPanel.value)">
+        <mat-button-toggle value="Global">Global</mat-button-toggle>
+        <mat-button-toggle value="Single">Single</mat-button-toggle>
+        </mat-button-toggle-group>
 </mat-toolbar>
 <mat-tab-group style="width:100%; height:100%">
   <mat-tab style="width:100%; height:100%" label="Monitoring">
@@ -37,8 +41,8 @@
                 fxLayoutAlign="center stretch"
                 fxLayoutGap="2px"
                 fxLayoutGap.xs="0">
-                  <div  *ngIf="allPlotsViewFlag; then LeftPlotView else controlPanelView"></div>
-                </div>
+                    <div  *ngIf="allPlotsViewFlag; then LeftPlotView else controlPanelView"></div>
+                </div>       
             </div>
             <div class="item item-3"  fxFlex="40" >
                 <div style="height:100%"> 
@@ -73,7 +77,10 @@
 
 <ng-template #controlPanelView>
     <div class="item item-1"  fxFlexFill >
-        <div style="height:100%;">
+        <div *ngIf="controlPanelViewFlag== false" style=" height:100%">
+            <app-bar-chart  idPlot="0" ></app-bar-chart>
+        </div> 
+        <div *ngIf="controlPanelViewFlag== true" style=" height:100%">
             <app-control-panel></app-control-panel>
         </div> 
     </div>
@@ -110,16 +117,17 @@
 </ng-template>  
 
 <ng-template #LeftPlotView>
-  <div class="item item-2"  fxFlex="50" >
-      <div style=" height:100%">
-          <app-plotter idPlot="2" label="Position" [fields]="['motorPos','linkPos','refPos']"></app-plotter>
-      </div> 
-  </div>
-  <div class="item item-3"  fxFlex="50" >
-      <div style=" height:100%">
-          <app-plotter idPlot="3" label="Velocity"  [fields]="['motorVel','linkVel','refVel']"></app-plotter> 
-      </div> 
-  </div>
+
+        <div class="item item-2"  fxFlex="50" >
+            <div style=" height:100%">
+                <app-plotter idPlot="2" label="Position" [fields]="['motorPos','linkPos','refPos']"></app-plotter>
+            </div> 
+        </div>
+        <div class="item item-3"  fxFlex="50" >
+            <div style=" height:100%">
+                <app-plotter idPlot="3" label="Velocity"  [fields]="['motorVel','linkVel','refVel']"></app-plotter> 
+            </div> 
+        </div>
 </ng-template>
 
 <ng-template #TreeView>
